--- a/prueba-full-stack/src/styles/App.css
+++ b/prueba-full-stack/src/styles/App.css
@@ -26,7 +26,11 @@ svg{
   padding: .10rem;
 }
 
-
+.imgf{
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
 
 svg:hover{
   color: black;
@@ -102,6 +106,7 @@ svg:hover{
 
 .App {
   text-align: center;
+  overflow-x: hidden;
 }
 
 .App-logo {
