--- a/prueba-full-stack/src/styles/App.css
+++ b/prueba-full-stack/src/styles/App.css
@@ -20,6 +20,11 @@ padding: 1rem 0 0 0;
   font-family: 'Playfair Display', serif;
 }
 
+.carritoco{
+  margin: 0 0 0 6rem;
+  width: auto;
+}
+
 .envgra{
   color:#7a4a58;
   margin: 0 0 0 6rem;
@@ -175,6 +180,80 @@ padding: 1rem 0 0 0;
   height: 40vmin;
   pointer-events: none;
 }
+
+
+@media only screen and (max-width: 600px) {
+  
+
+  
+.menu1{
+  text-align: center;
+  margin: 0 auto;
+  padding: 5px 0 0 0;
+  font-size: .7rem;
+}
+
+
+.logo{
+  background-color: #282c34;
+  margin: 0.5rem 5rem 0 0;
+  width: 5rem;
+  height: 3rem;
+}
+
+.inputbus{
+  width: auto;
+  margin: 0;
+  padding: 1rem 1rem 0 0;
+}
+
+.envgra{
+  margin: 0 auto;
+}
+
+.envgra h6{
+ font-size: .7rem;
+ padding: 0;
+}
+
+.menu2{
+  text-align: start;
+  margin: 0 auto;
+  padding: 0;
+  height: 2rem;
+  font-size: .75rem;
+
+}
+
+.menu2 a{
+  text-decoration: none;
+  color: black;  
+}
+
+
+.menu2 ul{
+  list-style: none;
+}
+
+.menu2 li{
+  display: inline-block;
+}
+
+  
+}
+/*
+
+@media only screen and (min-width: 600px) {...}
+
+
+@media only screen and (min-width: 768px) {...}
+
+
+@media only screen and (min-width: 992px) {...}
+
+
+@media only screen and (min-width: 1200px) {...}
+*/
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
