--- a/prueba-full-stack/src/styles/App.css
+++ b/prueba-full-stack/src/styles/App.css
@@ -144,35 +144,9 @@ padding: 1rem 0 0 0;
   padding: 0 5px;
 }
 
-.menu2{
-  font-family: 'Playfair Display', serif;
-  text-align: start;
-  margin: 0rem 0 1rem 0rem;
-  padding: 1rem 0 0 0;
-  height: 2rem;
-  font-size: 1.20rem;
 
-}
-
-.menu2 a{
-  text-decoration: none;
-  color: black;  
-  padding: 0 1rem;
-}
-
-.menu2  a:hover {
-  color: black;
-  background-color: #c8c6cb;
-  border-radius: 5px;
-}
-
-.menu2 ul{
-  list-style: none;
-  padding-right: 10rem;
-}
-
-.menu2 li{
-  display: inline;
+.letranav{
+  font-family:'Playfair Display', serif;
 }
 
 .App {
@@ -205,7 +179,7 @@ padding: 1rem 0 0 0;
 
 .logo{
   background-color: #282c34;
-  margin: 1rem 5rem 0 0;
+  margin: 1rem 0 0 -45%;
   padding:0;
   width: 5rem;
   height: 3rem;
@@ -226,40 +200,17 @@ padding: 1rem 0 0 0;
  padding: 0;
 }
 
-.menu2{
-  text-align: start;
-  margin: 0 auto;
-  padding: 0;
-  height: 2rem;
-  font-size: .75rem;
 
-}
-
-.menu2 a{
-  text-decoration: none;
-  color: black;  
-}
-
-
-.menu2 ul{
-  list-style: none;
-}
-
-.menu2 li{
-  display: inline-block;
-}
-
-  
 }
 
 
 @media only screen and (min-width: 600px) {
   
 .carritologo {
-  margin-left: 3.5rem;
+  margin-left: 35%;
   margin-bottom: .5rem;
   color:#707070 ;
-  width: 2rem;
+  width: 3rem;
   height: 2rem;
 }
   
@@ -273,20 +224,20 @@ padding: 1rem 0 0 0;
 
 .logo{
   background-color: #282c34;
-  margin: 1.75rem 10rem 0 0;
+  margin: 1.75rem 0 0 -60%;
   padding:0;
-  width: 7rem;
-  height: 3rem;
+  width: 6rem;
+  height: 3.5rem;
 }
 
 .inputbus{
-  width: 15rem;
-  margin: 0 0rem 0 4rem;
+  width: 10rem;
+  margin: 0 0rem 0 45%;
   padding: 1rem 1rem 0 0;
 }
 
 .envgra{
-  margin: 1rem 0 1rem 6rem;
+  margin: 1rem 0 1rem 45%;
   width: 10rem;
 }
 
@@ -298,10 +249,51 @@ padding: 1rem 0 0 0;
 
   
 }
+
+@media only screen and (min-width: 768px) {
+
+  .carritologo {
+  margin-bottom: .5rem;
+  color:#707070 ;
+  width: 2rem;
+  height: 2rem;
+}
+  
+.menu1{
+  text-align: end;
+  margin: 0 auto;
+  padding: 1px 0 0 0;
+  font-size: .8rem;
+}
+
+
+.logo{
+  background-color: #282c34;
+  margin: 1rem 0 0 -55%;
+  padding:0;
+  width: 6rem;
+  height: 4rem;
+}
+
+.inputbus{
+  width: 65%;
+  margin: 0 0 0 32%;
+  padding: 1rem 1rem 0 0;
+}
+
+.envgra{
+  width: 50%;
+  margin: .75rem 0 .75rem 40%;
+  padding: 0;
+}
+
+.envgra h6{
+ font-size: .8rem;
+
+}
+
+}
 /*
-
-@media only screen and (min-width: 768px) {...}
-
 
 @media only screen and (min-width: 992px) {...}
 
